--- a/reference/s2s-rng-api.v1.0.yaml
+++ b/reference/s2s-rng-api.v1.0.yaml
@@ -377,6 +377,22 @@ components:
           type: integer
           description: Business day under which the transaction was recorded. Format is YYMMDD.
           example: 200930
+    ExtractFields:
+      type: array
+      items:
+        type: object
+        description: Name/value pairs as would be generated in a CSV extract file.
+        properties:
+          name:
+            type: string
+            description: Column name for the CSV extract field.
+          value:
+            type: string
+            description: 'Value of the extract field, formatted for CSV.'
+          tmp: null
+        required:
+          - name
+          - value
   responses:
     BadRequestResponse:
       description: Bad Request
@@ -751,18 +767,7 @@ paths:
                       hsm:
                         $ref: '#/components/schemas/SecurityModule'
                       extractFields:
-                        type: object
-                        description: Name/value pairs as would be generated in a CSV extract file.
-                        properties:
-                          name:
-                            type: string
-                            description: Column name for the CSV extract field.
-                          value:
-                            type: string
-                            description: 'Value of the extract field, formatted for CSV.'
-                        required:
-                          - name
-                          - value
+                        $ref: '#/components/schemas/ExtractFields'
         '400':
           description: Bad Request
         '404':
