--- a/reference/s2s-transaction-api.v1.0.yaml
+++ b/reference/s2s-transaction-api.v1.0.yaml
@@ -188,6 +188,7 @@ components:
           example: 200930
     ExtractFields:
       type: array
+      description: Name/value pairs as would be generated in a CSV extract file.
       items:
         type: object
         description: Name/value pairs as would be generated in a CSV extract file.
