--- a/reference/s2s-rng-api.v1.0.yaml
+++ b/reference/s2s-rng-api.v1.0.yaml
@@ -379,9 +379,10 @@ components:
           example: 200930
     ExtractFields:
       type: array
+      description: Name/value pairs as would be generated in a CSV extract file.
       items:
         type: object
-        description: Name/value pairs as would be generated in a CSV extract file.
+        description: ''
         properties:
           name:
             type: string
